gccida/g2/have_add2_insn
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/have_add2_insn/src/optabs.c:4322:16: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
&& ( operand = insn_data_0[insn_code].operand, operand->predicate( 
               ^~~~~~~~~~~
               insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/have_add2_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/have_add2_insn/src/optabs.c:4324:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int16 *)operand + 8))) 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/have_add2_insn/src/optabs.c:4325:31: error: use of undeclared identifier 'machine_mode'
&& operand[1].predicate( x, ( machine_mode)*( ( unsigned __int16 *)&operand[1] + 8)) ) 
                              ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/have_add2_insn/src/obj/optabs.o] Error 1
